# RDK_SAMPLE_CAMERA

./: CMakeLists.txt  README.md  build_and_run.sh  build_project.sh  get_vin_data  package.xml
include/: cam_def.h  hb_camera_data_config.h  isp_cfg.h  mipi_cam.hpp  vin_cfg.h
src/: common_utils.c  common_utils.h  main.c  main.cpp  mipi_cam.cpp  mipi_cam.hpp  mipi_pipe.cpp  mipi_pipe.hpp  test_vp_functions.cpp
src/vp_sensors/: vp_sensors.c  vp_sensors.h
src/vp_sensors/dummy_sensor/: dummy_sensor.c
src/vp_sensors/f37/: linear_1920x1080_raw10_30fps_1lane.c
src/vp_sensors/sc230ai/: linear_1920x1080_raw10_10fps_1lane.c  linear_1920x1080_raw10_30fps_1lane.c
